# vvz-stellar-seismic-0catalog

./: .flake8  .gitignore  MANIFEST.in  README.md  projectid  pyproject.toml  tech.spec.md
.cursor/rules/: standards.mdc
.github/workflows/: ci.yml
docs/: ENRICHMENT_SOURCES.md  LAYOUT_STANDARDS.md  PROJECT_RULES.md
scripts/: compute_observables.py  download_catalogs.py  download_enrichment.py  merge_enrichment.py  process_catalogs.py
stellar_seismic_catalog/: __init__.py  archive.py  build_full_archive.py  catalogs_config.py  download.py  pack.py  process.py
stellar_seismic_catalog/enrichment/: __init__.py  archive_enriched.py  compute_observables.py  constants.py  download_data.py  empty_columns_report.py  merge_data.py  plots_enriched.py  run_pipeline.py
tests/: __init__.py  test_archive.py  test_package.py
