# Stellar Seismic Catalog — PyPI package config (flat layout, no src/)
# Author: Vasiliy Zdanovskiy
# email: vasilyvz@gmail.com

[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "stellar-seismic-catalog"
version = "0.1.0"
description = "Download and process stellar asteroseismic catalogs from MAST, VizieR, and Gaia."
readme = "README.md"
license = { text = "MIT" }
authors = [
    { name = "Vasiliy Zdanovskiy", email = "vasilyvz@gmail.com" }
]
requires-python = ">=3.10"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Astronomy",
]
dependencies = [
    "numpy",
    "pandas",
    "astroquery",
    "astropy",
    "matplotlib",
]

[project.optional-dependencies]
dev = [
    "black",
    "flake8",
    "mypy",
    "pytest",
]

[project.scripts]
stellar-seismic-download = "stellar_seismic_catalog.download:main"
stellar-seismic-process = "stellar_seismic_catalog.process:main"
stellar-seismic-pack = "stellar_seismic_catalog.pack:main"
stellar-seismic-enrich = "stellar_seismic_catalog.enrichment.run_pipeline:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["stellar_seismic_catalog*"]

[tool.black]
line-length = 88
target-version = ["py310", "py311", "py312"]

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
